syntax = "proto3";

option go_package = "github.com/rscales/malware/url_cache_api";

message URLInfo {
  string url = 1;
  bool malware = 2;
}

message URLInfoRequest {
  string url = 1;
}

message URLInfoResponse {
  URLInfo url_info = 1;
  int32 status = 2;
  string error_message = 3;
}

service URLCache {
  rpc getURLInfo(URLInfoRequest) returns (URLInfoResponse);
  rpc setFlaggedMalware(URLInfoRequest) returns (URLInfoResponse);
}
